<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.edilmer.examen.RegistryActivity">

    <include layout="@layout/activity_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/srt_txt_name"
                android:layout_toRightOf="@+id/logo"/>

            <TextView
                android:id="@+id/txt_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/srt_txt_lastname"
                android:layout_toRightOf="@+id/logo"
                android:layout_below="@+id/txt_name"/>

            <TextView
                android:id="@+id/txt_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/srt_txt_tel"
                android:layout_toRightOf="@+id/logo"
                android:layout_below="@+id/txt_lastname"/>

            <TextView
                android:id="@+id/txt_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/srt_txt_age"
                android:layout_toRightOf="@+id/logo"
                android:layout_below="@+id/txt_tel"/>

        </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="0.4"
    android:padding="30dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_email"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_comentary"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_update"
        android:hint="@string/srt_btn_update"/>
</LinearLayout>




    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
